Refactoring the query tests to use different Office entities.